--- a/emacs.org
+++ b/emacs.org
@@ -63,8 +63,12 @@ cat init.el
 (use-package afternoon-theme)
 
 (use-package dash)
-(use-package s)
 (use-package f)
+(use-package s
+  :config (progn
+            (defalias 's-empty? 's-blank?)
+            (defalias 's-nonempty? 's-present?)
+            (defalias 's-nonempty-or-nil 's-presence)))
 
 (use-package scratch)
 
@@ -140,9 +144,6 @@ cat init.el
 
 (use-package ess
   :config (setq save-abbrevs 'silently)) ;; ess R sets some abbrevs when installed
-
-(use-package ledger-mode
-  :mode (("\\.lgr$" . ledger-mode)))
 #+END_SRC
 
 *** languages
@@ -290,7 +291,7 @@ For long running processes, this will always toggle back and forth between the p
   (let* ((prepared-cmd (string-trim command))
          (cmd-process-name (or process-name (s-collapse-whitespace (s-left 100 prepared-cmd))))
          (cmd-buffer-name (format "*%s*" cmd-process-name)))
-    (if (string= "" prepared-cmd)
+    (if (s-empty? prepared-cmd)
         (message "Empty command! Doing nothing.")
       (if (process-live-p (get-process cmd-process-name))
           (if (string= (buffer-name) cmd-buffer-name) (switch-to-buffer (other-buffer)) (switch-to-buffer cmd-buffer-name))
@@ -986,10 +987,6 @@ base-keys (keys not in other parts of this config)
 | M-<backspace> | nil                                       | sp-keymap         |      |                           |
 | C-M-p         | nil                                       | sp-keymap         |      |                           |
 | C-M-n         | nil                                       | sp-keymap         |      |                           |
-| C-c @ <left>  | hs-hide-block                             | hs-minor-mode-map |      |                           |
-| C-c @ <right> | hs-show-block                             | hs-minor-mode-map |      |                           |
-| C-c @ <up>    | hs-hide-level                             | hs-minor-mode-map |      |                           |
-| C-c @ <down>  | hs-show-all                               | hs-minor-mode-map |      |                           |
 | C-x m         | jw-keymap                                 |                   |      |                           |
 | C-c m         | jw-keymap                                 |                   |      |                           |
 | m             | jw-keymap                                 | ctl-x-4-map       |      |                           |
@@ -1401,9 +1398,9 @@ faster searching
 
 magit-keys
 #+NAME: magit-keys
-| Key | Function               | Scope          |
-|-----+------------------------+----------------|
-| M-g | magit-status           |                |
+| Key | Function     |
+|-----+--------------|
+| M-g | magit-status |
 
 #+HEADER: :var magit-keys=magit-keys
 #+BEGIN_SRC emacs-lisp
@@ -1684,25 +1681,38 @@ hacky way of using org tables for markdown tables [[http://stackoverflow.com/que
 
 ** scala
 
+- todo -- the sbt command should prompt for a path to an sbt project if currently not in an sbt project
+- todo -- also, maybe add some rich functionality to invoke `sbt-new` if wanted
+
 scala-keys
 #+NAME: scala-keys
-| Key   | Function                   | Scope      | Hook            |
-|-------+----------------------------+------------+-----------------|
-| C-c s | sbt-command-prefix         | local      | sbt-mode-hook   |
-| C-c s | sbt-command-prefix         | local      | scala-mode-hook |
-| C-c s | sbt-command-prefix         | local      | magit-mode-hook |
-| s     | sbt                        | sbt-keymap |                 |
-| c     | sbt-compile                | sbt-keymap |                 |
-| o     | sbt-test-only-current-test | sbt-keymap |                 |
-| l     | sbt-run-previous-command   | sbt-keymap |                 |
+| Key   | Function                   | Scope      |
+|-------+----------------------------+------------|
+| C-c s | sbt-command-prefix         |            |
+| s     | jw-sbt                     | sbt-keymap |
+| c     | sbt-compile                | sbt-keymap |
+| o     | sbt-test-only-current-test | sbt-keymap |
+| l     | sbt-run-previous-command   | sbt-keymap |
 
 #+HEADER: :var scala-keys=scala-keys
 #+BEGIN_SRC emacs-lisp
-(defun sbt ()
+(defun jw-sbt ()
   (interactive)
   (if (eq major-mode 'sbt-mode)
       (switch-to-buffer (other-buffer))
-    (sbt-start)))
+    (with-temp-buffer
+      (if (sbt:find-root)
+          (sbt-start)
+        (call-interactively 'jw-sbt-run-or-create-new)))))
+
+(defun jw-sbt-run-or-create-new (dir)
+  (interactive "DSBT run or create new project in: ")
+  (when (not (f-exists? dir)) (make-directory dir 'make-parents))
+  (let ((default-directory dir))
+    (with-temp-buffer
+      (if (sbt:find-root)
+          (sbt-start)
+        (cmd "sbt-new")))))
 
 (defun sbt-current-tests-in-buffer ()
   (interactive)
@@ -1769,7 +1779,7 @@ adding sbt shortcut to helm projectile
 (defun helm-projectile-projects-sbt (dir)
   (interactive)
   (with-temp-buffer
-    (let ((default-directory dir)) (call-interactively 'sbt))))
+    (let ((default-directory dir)) (call-interactively 'jw-sbt))))
 
 (defun helm-projectile-projects-sbt-compile (dir)
   (interactive)
