--- a/emacs.org
+++ b/emacs.org
@@ -100,7 +100,6 @@ Now, start emacs.
 (use-package helm-flycheck)
 (use-package helm-flyspell :pin melpa)
 (use-package helm-descbinds)
-(use-package helm-company)
 (use-package helm-google :pin melpa)
 
 (use-package wgrep
@@ -951,6 +950,7 @@ base-keys (keys not in other parts of this config)
 | M-;           | comment-dwim-dwim                         |             |      |                           |
 | C-M-\         | indent-region-or-buffer                   |             |      |                           |
 | M-/           | dabbrev-expand                            |             |      | helm-dabbrev doesn't work |
+| C-M-/         | company-complete                          |             |      |                           |
 | M-g           | magit-status                              |             |      |                           |
 | S-M-SPC       | math-symbol-at-point                      |             |      |                           |
 | C-=           | er/expand-region                          |             |      |                           |
@@ -1261,7 +1261,6 @@ helm-keys
 | C-x r l | helm-bookmarks                  |                     |                  |                          |
 | C-x r j | helm-register-jump-dwim         |                     |                  |                          |
 | C-h a   | helm-apropos                    |                     |                  |                          |
-| C-M-/   | helm-company                    |                     |                  |                          |
 | C-h b   | helm-descbinds                  |                     |                  |                          |
 | C-h r   | helm-info-emacs                 |                     |                  |                          |
 | C-h d   | helm-info-at-point              |                     |                  |                          |
@@ -1309,19 +1308,6 @@ helm-keys
 (set-face-attribute 'helm-source-header nil :height 1.0 :weight 'normal :family (jw--font-name) :box '(:style released-button))
 (set-face-attribute 'helm-candidate-number nil :background jw--mode-line-color :foreground "goldenrod")
 
-(require 'company)
-(custom-set-faces ;; give company dropdown helm colors
- `(company-tooltip ((t (:background ,jw--mode-line-color))))
- `(company-scrollbar-bg ((t (:background "black"))))
- `(company-scrollbar-fg ((t (:background "#005858"))))
- `(company-tooltip-selection ((t (:inherit 'helm-selection))))
- `(company-tooltip-common ((t (:inherit 'helm-match))))
- `(company-tooltip-common-selection ((t (:inherit 'helm-match))))
- `(company-tooltip-annotation ((t (:inherit 'helm-bookmark-file))))
- `(company-preview-common ((t :inherit 'company-echo)))
- `(company-echo-common ((t :inherit 'company-echo)))
- `(company-template-field ((t :inherit 'helm-match-item))))
-
 (keybinding-org-table 'helm-keys)
 
 (helm-mode 1)
@@ -1367,6 +1353,22 @@ faster searching
 (helm-add-action-to-source "Ag in project `M-s a'" 'helm-projectile-projects-helm-projectile-ag helm-source-projectile-projects)
 (helm-projectile-define-key helm-projectile-projects-map (kbd "M-s s") 'helm-projectile-projects-helm-projectile-ag)
 (helm-projectile-define-key helm-projectile-projects-map (kbd "C-s") 'helm-projectile-projects-helm-projectile-ag) ;; hijack grep's keybinding
+#+END_SRC
+
+make company-complete dropdown look more like helm
+#+BEGIN_SRC emacs-lisp
+(require 'company)
+(custom-set-faces
+ `(company-tooltip ((t (:background ,jw--mode-line-color))))
+ `(company-scrollbar-bg ((t (:background "black"))))
+ `(company-scrollbar-fg ((t (:background "#005858"))))
+ `(company-tooltip-selection ((t (:inherit 'helm-selection))))
+ `(company-tooltip-common ((t (:inherit 'helm-match))))
+ `(company-tooltip-common-selection ((t (:inherit 'helm-match))))
+ `(company-tooltip-annotation ((t (:inherit 'helm-bookmark-file))))
+ `(company-preview-common ((t :inherit 'company-echo)))
+ `(company-echo-common ((t :inherit 'company-echo)))
+ `(company-template-field ((t :inherit 'helm-match-item))))
 #+END_SRC
 
 ** org
